--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,8 +6,8 @@
 		<h1>New Item</h1>
 		<form id="new-todo-form" action="/todos" method="POST">
 			<div class="form-group">
-				<label>Item Text</label>
-				<input type="text" name="todo[text]" class="form-control">
+				<label for="new-todo">Item Text</label>
+				<input type="text" name="todo[text]" placeholder="walk the dog" id="new-todo" class="form-control">
 			</div>
 			<button class="btn btn-primary">Create Item</button>
 		</form>
@@ -19,12 +19,19 @@
 		<ul class="list-group" id="todo-list">
 			<% todos.forEach(function(todo){ %>
 			<li class="list-group-item">
+				<form id="edit-todo-form" action="/todos/<%=todo._id%>" method="POST">
+					<div class="form-group">
+						<label for="<%=todo._id%>">Item Text</label>
+						<input type="text" value="<%= todo.text %>" name="todo[text]" id="<%=todo._id%>" class="form-control">
+					</div>
+					<button type="submit" class="btn btn-primary">Update Item</button>
+				</form>
 				<span class="lead">
 					<%= todo.text %>
 				</span>
 				<div class="pull-right">
-					<a href="/todos/<%=todo._id%>/edit" class="btn btn-sm btn-warning">Edit</a>
-					<form style="display: inline" method="POST" action="/todos/<%=todo._id%>">
+					<button id="edit-btn" class="btn btn-sm btn-warning">Edit</button>
+					<form id="delete-todo-form" style="display: inline" method="POST" action="/todos/<%=todo._id%>">
 						<button type="submit" class="btn btn-sm btn-danger">Delete</button>
 					</form>
 				</div>
